Commit for version 0.9 (HanaDB)